tests/miz/pass/types/pass_type_elaboration_local_object_mode_reserved_variable_type_assertion_001.miz
definition
  mode LocalObjectModeTypeAssertionDef: LocalObjectModeTypeAssertion is object;
end;

reserve x for LocalObjectModeTypeAssertion;
theorem LocalObjectModeReservedVariableTypeAssertionPayloadBoundary: x is object;
