tests/miz/fail/parser/fail_parser_missing_block_semicolon_001.miz
definition
end
theorem T: thesis;
